[APP][OUTBOX][C4GH-FS] Move enum ExportStage to shared